endpoint/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-endpoint
  namespace: test-project
spec:
  selector:
    matchLabels:
      app: grpc-endpoint
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: grpc-endpoint
    spec:
      containers:
        - name: grpc-client
          image: evil26r/grpc-endpoint-test
          ports:
            - containerPort: 50051
