endpoint/VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  generation: 1
  name: grpc-endpoint
  namespace: test-project
spec:
  hosts:
    - grpc-endpoint
  http:
    - route:
        - destination:
            host: grpc-endpoint
